--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "flowbite-react": "^0.6.4",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
